remove vector benchmark