@@ -1,5 +1,3 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
-
 plugins {
     alias(libs.plugins.kotlin.jvm)
     alias(libs.plugins.compose.compiler)
@@ -48,13 +46,5 @@ dependencies {
 
 composeCompiler {
     featureFlags.set(emptySet())
-}
-
-tasks.withType<KotlinJvmCompile>().configureEach {
-    compilerOptions.freeCompilerArgs.add("-Xadd-modules=jdk.incubator.vector")
-}
-
-tasks.withType<Test>().configureEach {
-    jvmArgs("--add-modules=jdk.incubator.vector")
 }
 
